--- a/html/index.html
+++ b/html/index.html
@@ -10,5 +10,5 @@
   
   
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
-  
+ <script></script> $("#yo").append("hey hey hey hey!!!!!");
 </body>
